# qyl-dify-v3

./: .gitignore
api/: .env.example  Dockerfile  pyproject.toml
api/configs/deploy/: __init__.py
api/docker/: build.latest.sh
api/fields/: conversation_fields.py  installed_app_fields.py  member_fields.py
api/libs/: oauth.py
api/models/: model.py
api/services/: account_service.py  installed_app_service.py
api/tasks/: mail_invite_member_task.py
docker/: .env.example  docker-compose.middleware.yaml  docker-compose.yaml  middleware.env.example
docker/nginx/: proxy.conf.template
racio-account/account-api/: .env.example  Dockerfile  README.md  config.py  pyproject.toml
racio-account/account-api/controllers/console/: __init__.py  activate.py  oauth.py
racio-account/account-api/controllers/web/: __init__.py  account.py  member_invite.py
racio-account/account-api/docker/: build.latest.sh  entrypoint.sh
racio-account/account-api/fields/: app_fields.py
racio-account/account-api/libs/: response.py
racio-account/account-api/models/racio/: account.py
racio-account/account-api/services/dify/: api_service.py
racio-account/account-api/services/racio/: account_service.py
racio-account/account-dashboard/: .env.development  .env.development.example  .env.production  .gitignore  Dockerfile  README.md  package.json  tailwind.config.js  vite.config.ts
web/: .env.example  Dockerfile  next.config.js  package.json
web/app/: layout.tsx
web/config/: index.ts
web/docker/: build.latest.sh  entrypoint.sh
web/i18n/: languages.json
web/models/: common.ts
(+169 files in other folders)
